assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Lugrasimo&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lugrasimo&family=Roboto:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

/* index.html header */
.container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
}

header {
    width: 100%;
    height: 100%;
    font-family: Lugrasimo;
    text-align: center;
    font-size: 200%;
    padding: 40px 0px;
    font-weight: 300;
    color: #FEFBEA;
    background: url("../assets/images/longboat.jpg") center / cover;
}

body {
    font-family: Lugrasimo;
}

#navbar {
    width: 100%;
    clear: left;
    background-color: #317773;
}

#navbar li {
    display: inline-block;
    text-align: center;
    width: 33%;
}

#navbar a {
    display: inline-block;
    font-family: roboto;
    font-size: 140%;
    font-weight: 700;
    width: 100%;
    padding-top: 10px;
    padding-bottom: 15px;
    color: #FEFBEA;
    text-decoration: none;
}

#navbar a:hover {
    background-color: #FEFBEA;
    color: #317773;
}

/* content section */
.left-text-content {
    flex: 1;
    display: block;
    padding-top: 2%;
    background-color: #FEFBEA;
    width: 50%;
}

.left-text-content h2 {
    text-align: center;
    text-decoration: underline;
    margin-bottom: 5px;
    font-weight: 900;
    font-family: roboto;
    color: #317773;
}

.left-text-content p {
    line-height: 25px;
    margin: auto 5%;
    text-align: justify;
    font-weight: 600;
}

.left-image-format {
    display: block;
    width: 50%;
}

.left-image-format img {
    flex: 1;
    width: 100%;
    height: 100%;
}

.right-image-format {
    display: block;
    width: 50%;
}

.right-image-format img {
    flex: 1;
    width: 100%;
    height: 100%;
}

.right-text-content {
    flex: 1;
    display: block;
    padding-top: 2%;
    background-color: #317773;
    width: 50%;
}

.right-text-content h2 {
    text-align: center;
    text-decoration: underline;
    margin-bottom: 10px;
    font-weight: 900;
    font-family: roboto;
    color: #FEFBEA;
}

.right-text-content p {
    line-height: 25px;
    margin: auto 5%;
    text-align: justify;
    font-weight: 600;
    color: white;
}


/* Footer content */
.footer {
    flex: 1;
    display: inline-block;
    width: 100%;
    height: 195px;
    background-color: #317773;
}

#copyright {
    position: absolute;
    opacity: 0.3;
    text-align: center;
    padding: 140px 20px 0px;
    font-family: roboto;
}

#footer-logo {
    position: absolute;
    padding: 50px 10px 0px;
    color: #e2ecba;
}

.footer p {
    margin-right: 15px;
    display: inline-block;
    float: inline-start;
    color: #e4f6f8;
    font-family: roboto;

}

.social-icons {
    float: right;
    padding: 50px 50px 5px;
}

.social-icons li {
    display: inline;
}

.social-logo-img {
    max-height: 45px;
    max-width: 45px;
}

#facebook-logo-img {
    max-width: 50px;
    max-height: 50px;
}

/* ivar.html */
.ivar-content {
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

#ivar-article {
    flex: 2;
    background-color: #FEFBEA;
    height: 100%;
    padding-top: 35px;
    padding-bottom: auto;
}

#ivar-article h2 {

    text-decoration: underline;
    text-align: center;
    font-weight: 900;
    font-family: roboto;
}

#ivar-article p {
    padding: 5px 25px 15px;
    line-height: 25px;
    font-weight: 500;
    text-align: justify;
}

#ivar-image {
    flex: 1;
    float: left;
}

#ivar-image img {
    width: 100%;
    height: 100%;
    align-items: stretch;
}


/* contact.html */
section h2 {
    text-decoration: underline;
    text-align: center;
    font-family: roboto;
}

#form-section {
    display: inline-block;
    float: left;
    width: 50%;
    text-align: left;
    background-color: #e4f6f8;
    height: 600px;
}

#form-section h2 {
    text-align: center;
    font-weight: 900;
    font-family: roboto;
}

#form-section form {
    padding: 25px 25px;
    font-weight: 900;
    font-family: roboto;

}

.form-input {
    display: block;
    border: 1px solid black;
    width: 60%;
    margin-bottom: 15px;
}

textarea {
    margin: 15px 0px;
    border: solid black 1px;
    height: 150px;
    width: 300px;
}

.submit-button {
    position: relative;
    display: block;
    width: fit-content;
    background-color: #317773;
    margin: 15px 0px 35px;
    padding: 10px 20px;
    border: solid black 2px;
}

.submit-button:hover {
    background-color: #e4f6f8;
}

#find-out-more {
    display: block;
    float: right;
    width: 50%;
    text-align: center;
    background-color: #FEFBEA;
    height: 600px;
}

#find-out-more h2 {
    align-content: center;
    margin-top: 25px;
    font-family: roboto;
}

#find-out-more p {
    text-align: center;
    margin: 10px 15px;
    font-family: roboto;
}

/* Device amends */
@media screen and (max-width: 1500px) {
    .left-text-content {
        position: relative;
        font-size: 85%;
    }

    .right-text-content {
        position: relative;
        font-size: 85%;
    }


@media screen and (max-width: 1250px) {

    #navbar li {
        width: 100%;
        overflow: hidden;
    }

    #about-us {
        width: 100%;
    }

    #ivar-article {
        font-size: 60%;
    }

    #form-section {
        width: 100%
    }

    form {
        margin-left: 10%;
    }

    form h2 {
            margin-right: 11%;
        }

    #find-out-more {
        width: 100%;
    }

    .left-text-content {
        position: relative;
        font-size: 65%;
    }

    .right-text-content {
        position: relative;
        font-size: 65%;
    }
}

